Fix build error
Signed-off-by: Aurel Pop <47039993+popaurel@users.noreply.github.com>

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -40,7 +40,8 @@ const blog = await getRecentPosts(SITE.featuredPostCount)
           </li>
           <li>
             <b>Market Intelligence:</b>
-            Analyzing how AI is changing the landscape of financial analysis, risk management, and long-term value creation.
+            Analyzing how AI is changing the landscape of financial analysis, risk
+            management, and long-term value creation.
           </li>
         </ul>
       </p>
