--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -14,23 +14,21 @@ import logoDark from '../../public/static/logo_black.svg'
   >
     <Link href="/" class="flex shrink-0 items-center justify-center gap-3">
       <!-- Logo for light theme -->
-      <Image 
-        src={logo} 
-        alt="Logo" 
-        class="size-6 sm:size-7 block dark:hidden" 
-      />
+      <Image src={logo} alt="Logo" class="block size-6 sm:size-7 dark:hidden" />
       <!-- Logo for dark theme -->
-      <Image 
-        src={logoDark} 
-        alt="Logo" 
-        class="size-6 sm:size-7 hidden dark:block" 
+      <Image
+        src={logoDark}
+        alt="Logo"
+        class="hidden size-6 sm:size-7 dark:block"
       />
       <span class="hidden h-full text-xl font-semibold min-[300px]:block"
         >{SITE.title}</span
       >
     </Link>
     <div class="flex items-center sm:gap-4">
-      <nav class="hidden items-center gap-4 text-sm font-semibold sm:flex sm:gap-6">
+      <nav
+        class="hidden items-center gap-4 text-sm font-semibold sm:flex sm:gap-6"
+      >
         {
           NAV_LINKS.map((item) => (
             <Link
