--- a/src/pages/blog/[...id].astro
+++ b/src/pages/blog/[...id].astro
@@ -78,8 +78,7 @@ const tocSections = await getTOCSections(currentPostId)
   <section
     class="grid grid-cols-[minmax(0px,1fr)_min(calc(var(--breakpoint-md)-2rem),100%)_minmax(0px,1fr)] gap-y-6"
   >
-    <div class="col-start-2">
-    </div>
+    <div class="col-start-2"></div>
 
     {
       post.data.image && (
