--- a/src/pages/tags/index.astro
+++ b/src/pages/tags/index.astro
@@ -1,9 +1,9 @@
 ---
 import Link from '@/components/Link.astro'
 import PageHead from '@/components/PageHead.astro'
-import { badgeVariants } from '@/components/ui/badge'
 import Layout from '@/layouts/Layout.astro'
 import { getSortedTags } from '@/lib/data-utils'
+import { badgeVariants } from '@/components/ui/badge'
 import { Icon } from 'astro-icon/components'
 
 const sortedTags = await getSortedTags()
@@ -11,11 +11,16 @@ const sortedTags = await getSortedTags()
 
 <Layout class="max-w-3xl">
   <PageHead slot="head" title="Tags" />
-            {tag}
-            <span class="text-muted-foreground ml-1.5">({count})</span>
-          </Link>
-        ))
-      }
-    </div>
+  <div class="flex flex-wrap gap-2">
+    {sortedTags.map(({ tag, count }) => (
+      <Link 
+        href={`/tags/${tag}`}
+        class={badgeVariants({ variant: 'secondary' })}
+      >
+        <Icon name="lucide:hash" class="w-3 h-3 mr-1" />
+        {tag}
+        <span class="text-muted-foreground ml-1.5">({count})</span>
+      </Link>
+    ))}
   </div>
 </Layout>
