--- a/src/pages/blog/[...id].astro
+++ b/src/pages/blog/[...id].astro
@@ -41,7 +41,7 @@ const authors = await parseAuthors(post.data.authors ?? [])
 
 const isCurrentSubpost = isSubpost(currentPostId)
 const navigation = await getAdjacentPosts(currentPostId)
-const parentPost = isCurrentSubpost ? await getParentPost(currentPostId) : null
+const _parentPost = isCurrentSubpost ? await getParentPost(currentPostId) : null
 
 const hasChildPosts = await hasSubposts(currentPostId)
 const subpostCount = !isCurrentSubpost
