Add cookie banner
Signed-off-by: Aurel Pop <47039993+popaurel@users.noreply.github.com>

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -15,5 +15,6 @@ import SocialIcons from './SocialIcons.astro'
       <Separator orientation="vertical" className="hidden h-4! sm:block" />
     </div>
     <SocialIcons links={SOCIAL_LINKS} />
+    <script type="module" src="/src/scripts/cookieconsent.js"></script>
   </div>
 </footer>
