--- a/src/components/Head.astro
+++ b/src/components/Head.astro
@@ -42,6 +42,8 @@ import Favicons from './Favicons.astro'
     href={new URL('rss.xml', Astro.site)}
   />
 
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/orestbida/cookieconsent@3.1.0/dist/cookieconsent.css">
+
   <Favicons />
   <ClientRouter />
 
