Comment out PostNavigation component in blog post template

--- a/src/pages/blog/[...id].astro
+++ b/src/pages/blog/[...id].astro
@@ -172,11 +172,11 @@ const tocSections = await getTOCSections(currentPostId)
         </div>
       </div>
 
-      <PostNavigation
+      <!-- <PostNavigation
         newerPost={navigation.newer}
         olderPost={navigation.older}
         parentPost={isCurrentSubpost ? navigation.parent : undefined}
-      />
+      /> -->
     </section>
 
     {
