--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -9,17 +9,17 @@ import SocialIcons from './SocialIcons.astro'
     class="mx-auto flex max-w-3xl flex-col items-center justify-center gap-y-2 px-4 sm:flex-row sm:justify-between"
   >
     <div class="flex flex-wrap items-center justify-center gap-x-2 text-center">
-      <span class="text-muted-foreground text-sm">
+      <span class="text-muted-foreground text-xs">
         <a href="#privacy">Privacy Policy</a>
       </span>
       <Separator orientation="vertical" className="hidden h-4! sm:block" />
-      <span class="text-muted-foreground text-sm">
+      <span class="text-muted-foreground text-xs">
         <a href="#terms">Terms and conditions</a>
       </span>
       <Separator orientation="vertical" className="hidden h-4! sm:block" />
     </div>
     <div class="flex flex-wrap items-center justify-center gap-x-2 text-center">
-      <span class="text-muted-foreground text-sm">
+      <span class="text-muted-foreground text-xs">
         &copy; {new Date().getFullYear()} aurelpop.com. All rights reserved.
       </span>
     </div>
