--- a/src/pages/blog/[...id].astro
+++ b/src/pages/blog/[...id].astro
@@ -87,6 +87,9 @@ const tocSections = await getTOCSections(currentPostId)
           alt={post.data.title}
           width={1200}
           height={630}
+        widths={[600, 768, 960, 1200]}
+        sizes="(min-width: 1024px) 768px, (min-width: 640px) 600px, 100vw"
+        loading="eager"
           class="col-span-full mx-auto w-full max-w-5xl object-cover"
         />
       )
@@ -114,6 +117,7 @@ const tocSections = await getTOCSections(currentPostId)
                       alt={author.name}
                       width={20}
                       height={20}
+                      loading="lazy"
                       class="rounded-full"
                     />
                     <span>{author.name}</span>
