--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -4,8 +4,8 @@ import ThemeToggle from '@/components/ThemeToggle.astro'
 import MobileMenu from '@/components/ui/mobile-menu'
 import { NAV_LINKS, SITE } from '@/consts'
 import { Image } from 'astro:assets'
-import logo from '../../public/static/logo.svg'
-import logoDark from '../../public/static/logo_black.svg'
+import logo from '@/assets/logo.svg'
+import logoDark from '@/assets/logo_black.svg'
 ---
 
 <header transition:persist>
