--- a/src/components/PostHead.astro
+++ b/src/components/PostHead.astro
@@ -11,7 +11,8 @@ const { post } = Astro.props
 
 const title = post.data.title || SITE.title
 const description = post.data.description || SITE.description
-const image = new URL('/static/1200x630.png', Astro.site)
+import ogImage from '@/assets/1200x630.png'
+const image = new URL(ogImage.src, Astro.site)
 const author =
   post.data.authors && post.data.authors.length > 0
     ? post.data.authors.join(', ')
