--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -25,6 +25,7 @@ const aurel = authors.find((a) => a.id === 'aurel')
               height={128}
               class="h-32 w-32 rounded-full object-cover shadow-lg"
               sizes="128px"
+              decoding="async"
               loading="lazy"
             />
           ) : (
