--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -32,6 +32,7 @@ const { project } = Astro.props
             widths={[256, 320, 480, 640, 960, 1200]}
             sizes="(min-width: 640px) 256px, 100vw"
             loading="lazy"
+            decoding="async"
             class="object-cover"
           />
         </div>
