--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -23,7 +23,7 @@ const blog = await getRecentPosts(SITE.featuredPostCount)
         ))
       }
     </ul>
-<!--     <div class="flex justify-center">
+    <div class="flex justify-center">
       <Link
         href="/blog"
         class={buttonVariants({ variant: 'ghost' }) + ' group'}
@@ -33,7 +33,7 @@ const blog = await getRecentPosts(SITE.featuredPostCount)
           >&rarr;</span
         >
       </Link>
-    </div> -->
+    </div>
   </section>
 
   <div class="min-w-full">
